syntax = "proto3";

import "openconfig-interfaces.proto";
import "ietf-network.proto";

package api;

message Empty {}

service NetworkStatistics {
    rpc GetStatistics(Empty) returns (stream openconfig_interfaces.Interfaces_Interface) {};
}

service NetworkDescriptor {
    //Get topology RPC call
    rpc GetTopology(Empty) returns (ietf_network.Networks) {};
}
